tests/spec/parse/snapshots/if_else.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test(a: int) {
    if a > 10 {
      print("large");
    } else {
      print("small or medium");
    }
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "a",
                    span: Span {
                        file_id: 0,
                        byte_offset: 9,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "int",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 12,
                            byte_length: 3,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    If {
                        condition: Binary {
                            operator: GreaterThan,
                            left: Identifier {
                                value: "a",
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 24,
                                    byte_length: 1,
                                },
                                resolution: Unresolved,
                            },
                            right: Literal {
                                literal: Integer {
                                    value: 10,
                                    text: None,
                                },
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 28,
                                    byte_length: 2,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 24,
                                byte_length: 6,
                            },
                        },
                        consequence: Block {
                            items: [
                                Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 37,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Literal {
                                            literal: String {
                                                value: "large",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 43,
                                                byte_length: 7,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 37,
                                        byte_length: 14,
                                    },
                                    call_kind: Unresolved,
                                },
                            ],
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 31,
                                byte_length: 25,
                            },
                        },
                        alternative: Some(
                            Block {
                                items: [
                                    Call {
                                        expression: Identifier {
                                            value: "print",
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 68,
                                                byte_length: 5,
                                            },
                                            resolution: Unresolved,
                                        },
                                        args: [
                                            Literal {
                                                literal: String {
                                                    value: "small or medium",
                                                    raw: false,
                                                },
                                                ty: Var {
                                                    id: uninferred,
                                                },
                                                span: Span {
                                                    file_id: 0,
                                                    byte_offset: 74,
                                                    byte_length: 17,
                                                },
                                            },
                                        ],
                                        spread: None,
                                        type_arguments: None,
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 68,
                                            byte_length: 24,
                                        },
                                        call_kind: Unresolved,
                                    },
                                ],
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 62,
                                    byte_length: 35,
                                },
                            },
                        ),
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 21,
                            byte_length: 76,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 17,
                    byte_length: 82,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 98,
        },
    },
]
